--- a/data/configFileDefaults/MainConfig.cfg
+++ b/data/configFileDefaults/MainConfig.cfg
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE roles SYSTEM "roles.dtd">
-<roles>
-    <setting key="" value=""/>
-</roles>
+<settings>
+    <setting key="LogLevel" value="DEBUG"/>
+</settings>
