--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ Telem.jar
 *.tar.gz
 *.rar
 
+# Config files
+./*.cfg
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 .vscode/c_cpp_properties.json
