--- a/data/configFileDefaults/MainConfig.cfg
+++ b/data/configFileDefaults/MainConfig.cfg
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <settings>
+    <setting key="RunTimeInMinutes" value="1"/>
     <setting key="LogLevel" value="DEBUG"/>
 </settings>
