--- a/data/configFileDefaults/ESPConfig.cfg
+++ b/data/configFileDefaults/ESPConfig.cfg
@@ -2,5 +2,5 @@
 <settings>
     <setting key="BoardName" value="ESP-WROOM-32"/>
     <setting key="Timeout" value="2500"/>
-    <setting key="PortName" value="COM4"/>
+    <setting key="PortName" value="/dev/ttyUSB0"/>
 </settings>
