Refactoring a few things. ECC/AES support, run count instead of run time.

--- a/data/configFileDefaults/MainConfig.cfg
+++ b/data/configFileDefaults/MainConfig.cfg
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <settings>
-    <setting key="RunTimeInMinutes" value="1"/>
-    <setting key="LogLevel" value="DEBUG"/>
+    <setting key="RunsToDo" value="1500"/>
+    <setting key="LogLevel" value="INFO"/>
+    <setting key="Protocol" value="WiFi"/>
+    <setting key="Encryption" value="None"/>
 </settings>
