Refactoring, encryption implementations, receiver/transmitter logic

--- a/Clicker/CMakeLists.txt
+++ b/Clicker/CMakeLists.txt
@@ -29,6 +29,10 @@ aes.c
 aes.h
 ecc.c
 ecdh.h
+des.h
+des.h
+enc_supp.h
+utils.h
 )
 
 ############################ SandboxLegacy GENERATED CODE START ###########################
